helm-charts/service-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: symfony-service
  namespace: webapps
  labels:
    app: symfony-app
spec:
  selector:
    app: symfony-app
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
  - name: php
    protocol: TCP
    port: 9000
    targetPort: 9000
  type: ClusterIP
