helm-charts/ingress-app.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: symfony-ingress
  namespace: webapps
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: app.onumanozdemir.online
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: symfony-service
            port:
              number: 80
